[gd_scene load_steps=13 format=3 uid="uid://bkhrcemal7uxo"]

[ext_resource type="Script" path="res://core/ui/components/card.gd" id="1_aiin0"]
[ext_resource type="Texture2D" uid="uid://blc0qyvt1qhci" path="res://assets/images/placeholder-grid-portrait.png" id="2_2hlyj"]
[ext_resource type="PackedScene" uid="uid://c5sfkhrfbao71" path="res://core/systems/effects/play_audio_effect.tscn" id="2_701dj"]
[ext_resource type="PackedScene" uid="uid://bui0u88oe8jr" path="res://core/systems/effects/raise_effect.tscn" id="3_gyi80"]
[ext_resource type="Shader" path="res://assets/shaders/highlight_shine.gdshader" id="5_0n631"]
[ext_resource type="Shader" path="res://assets/shaders/god_rays.gdshader" id="7_8n7dp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygsnb"]
corner_radius_top_left = 26
corner_radius_top_right = 26
corner_radius_bottom_right = 26
corner_radius_bottom_left = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtppc"]
bg_color = Color(0.156863, 0.164706, 0.211765, 0.698039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_up8ek"]
bg_color = Color(1, 0.47451, 0.776471, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bdvx"]
resource_local_to_scene = true
shader = ExtResource("5_0n631")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.075
shader_parameter/Brightness = 0.81
shader_parameter/Rotation_deg = 35.0
shader_parameter/Distortion = 1.67
shader_parameter/Speed = 0.31
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1nde2"]
resource_local_to_scene = true
shader = ExtResource("7_8n7dp")
shader_parameter/angle = 0.0
shader_parameter/position = 0.0
shader_parameter/spread = 1.0
shader_parameter/cutoff = -1.0
shader_parameter/falloff = 1.0
shader_parameter/edge_fade = 0.904
shader_parameter/speed = 20.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(0.960784, 0.937255, 1, 0.117647)
shader_parameter/hdr = false
shader_parameter/seed = 5.96

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_st1t5"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 26
corner_radius_top_right = 26
corner_radius_bottom_right = 26
corner_radius_bottom_left = 26
shadow_color = Color(0, 0, 0, 0.486275)
shadow_size = 20
shadow_offset = Vector2(0, 5)

[node name="GameCard" type="Control"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 300.0
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 1
script = ExtResource("1_aiin0")

[node name="PlayFocusAudioEffect" parent="." instance=ExtResource("2_701dj")]
on_signal = "focus_entered"

[node name="PlaySelectedAudioEffect" parent="." instance=ExtResource("2_701dj")]
audio = "res://assets/audio/interface/96127__bmaczero__contact1.ogg"
on_signal = "pressed"

[node name="RaiseEffect" parent="." node_paths=PackedStringArray("target", "shadow") instance=ExtResource("3_gyi80")]
target = NodePath("../PanelContainer")
shadow = NodePath("../MarginContainer/Shadow")
scale_on_raised = Vector2(1.02, 1.02)
shadow_size_on_raised = 26
shadow_color_on_raised = Color(0.0627451, 0.0627451, 0.0627451, 0.301961)
on_signal = "highlighted"
lower_signal = "unhighlighted"
on_signal = "highlighted"

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 1
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ygsnb")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture = ExtResource("2_2hlyj")
expand_mode = 1
stretch_mode = 4

[node name="NameMargin" type="MarginContainer" parent="PanelContainer/TextureRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 70

[node name="NamePanel" type="PanelContainer" parent="PanelContainer/TextureRect/NameMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gtppc")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TextureRect/NameMargin/NamePanel"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="NameLabel" type="Label" parent="PanelContainer/TextureRect/NameMargin/NamePanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Game Name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/TextureRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_up8ek")
value = 50.0
rounded = true

[node name="ShineShader" type="ColorRect" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_1bdvx")
layout_mode = 2
mouse_filter = 2

[node name="GodRaysShader" type="ColorRect" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_1nde2")
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(200, 300)
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Shadow" type="PanelContainer" parent="MarginContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_st1t5")

[node name="TapTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true
